--- a/sass/_themeDark.sass
+++ b/sass/_themeDark.sass
@@ -44,7 +44,7 @@ html[lang="en"]
       left: 0px
       top: 19px
       text-indent: -9999px
-      z-index: 100
+      z-index: -100
       background-repeat: no-repeat
       &:hover
         background: url(%%banneron%%)
